--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@ style="position: absolute; bottom: -225rem; right: 11.5rem;"
         <div class="nav-links-container">
           <ul class="nav-links">
             <li><a href="#about">About</a></li>
-            <li><a href="#research">Skills</a></li>
+            <li><a href="#skills">Skills</a></li>
             <li><a href="#publications">Research</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
