--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
             onclick="location.href='https://www.researchgate.net/profile/N-A-Anjita-2'"
           />
           <img
+            src="./assets/gs.png"
+            alt="My GS profile"
+            class="icon"
+            onclick="location.href='https://scholar.google.com/citations?user=R3qMy7QAAAAJ&hl=en'"
+          />
+          <img
             src="./assets/twitter.png"
             alt="My Twitter profile"
             class="icon"
